--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,4 +1,8 @@
 .About{
     height: 100vh;
     background: rgb(65, 223, 223);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
