creating a cart page, and simple logo

--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -1,6 +1,7 @@
-.Home{
+
+.CartForm{
     height: 90vh;
-    background:transparent;
+    background: White;
     display: flex;
     flex-direction: row;
     justify-content: center;
