--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,8 +1,21 @@
 .About{
-    height: 100vh;
+    height: 90vh;
     background: rgb(65, 223, 223);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.innerAbout{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+    color:Gray!important;
+    font-weight: bold;
+}
+.pAbout{
+    color:Gray!important;    
 }
