--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -10,7 +10,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;        
-        background: rgb(167, 166, 166);
+        background:transparent!important;
     }
     
     .Logo{
@@ -18,7 +18,7 @@
         flex-direction: row;
         justify-content: start;
         align-items: center;
-        color:black;
+        color:white;
         font-weight: bold;
         font-size: 25px;
         padding-left:10px;
@@ -28,7 +28,7 @@
         display:flex;
         flex-direction: row;
         justify-content: space-around;
-        background: gray;
+        background:transparent!important;
     }
     a{
         display: flex;
@@ -37,7 +37,7 @@
         justify-content: center;
         align-items: center;    
         opacity: 0.7;
-        color:black;
+        color:white;
     }
     a:hover{
         opacity: 1;
@@ -50,6 +50,7 @@
         justify-content: center;
         align-items: center;    
         opacity: 0.7;
+        color:white;
     }
     p:hover{
         opacity: 1;
