--- a/src/styles/Shop.css
+++ b/src/styles/Shop.css
@@ -1,4 +1,9 @@
+
 .Shop{
-    height: 100vh;
-    background: rgb(223, 65, 65);
+    height: 90vh;
+    background: rgb(86, 0, 88);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
