--- a/src/styles/ItemComponent.css
+++ b/src/styles/ItemComponent.css
@@ -16,3 +16,28 @@
     border-radius:10px ;
     margin-bottom: 10px;
 }
+.addButton{
+    width: 25%;
+    height: 35px;
+    border-radius: 10px;
+    background: transparent;
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
+    padding-top: 10px;
+}
+.addButton:hover{        
+    background: rgb(145, 136, 110);
+}
+.linePrice{
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    flex-direction: row;
+}
+.priceLabel{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 18px;
+}
