--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -7,3 +7,8 @@
     justify-content: center;
     align-items: center;
 }
+@media screen and (max-width: 420px) {
+    .CartForm{
+        height: 200vh;
+    }
+}
