--- a/src/styles/ItemComponent.css
+++ b/src/styles/ItemComponent.css
@@ -1,5 +1,5 @@
 .item{
-    width:  32%;
+    width:  200px;
     background: rgb(243, 229, 185);
     display: flex;
     flex-direction: column;
@@ -25,6 +25,7 @@
     font-weight: bold;
     font-size: 18px;
     padding-top: 10px;
+    margin-bottom:10px;
 }
 .addButton:hover{        
     background: rgb(145, 136, 110);
