--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -28,7 +28,7 @@
     align-items: center;
     justify-content: space-around;
     font-weight: bold;
-    border-style: none none none none;
+    border-style: none none double none;
     margin-bottom: 20px;
     color:red;
 }
@@ -44,6 +44,13 @@
     display: flex;
     flex-direction: row;
     margin-left: 0;
+    width: 30%;
+}
+
+.totalLine{
+    display: flex;
+    flex-direction: row;   
+    justify-content: space-between; 
     width: 30%;
 }
 @media screen and (max-width: 420px) {
