--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: linear-gradient(black,rgb(180, 245, 245),blue);
 }
 .ticket{
     text-decoration: none;
@@ -19,6 +20,7 @@
     justify-content: space-around;
     font-weight: bold;
     border-style: none none solid none;
+    text-align: center;
 }
 .liTicketHeader{    
     display: flex;
@@ -31,6 +33,7 @@
     border-style: none none double none;
     margin-bottom: 20px;
     color:red;
+    text-align: center;
 }
 .ulTicket{
     text-decoration: none;
@@ -51,7 +54,26 @@
     display: flex;
     flex-direction: row;   
     justify-content: space-between; 
-    width: 30%;
+    width: 300px;
+    font-size: 25px;
+    font-weight: bold;
+}
+.finishButton{
+    display:flex;
+    background: gold;
+    width: auto;
+    height: auto;
+    margin-top: 30px;
+    font-size: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 15px 0px black ;
+}
+.trash{
+    background: transparent;
+    border-style: none;
+}
+.trash:hover{
+    font-size: 20px;
 }
 @media screen and (max-width: 420px) {
     .CartForm{
