--- a/src/styles/Shop.css
+++ b/src/styles/Shop.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: linear-gradient(black,orange,blue);
 }
 .ItemsArray{
     display:flex;
