fixing aligment and colors

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -3,9 +3,10 @@
     background: transparent;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     background: linear-gradient(black,rgb(112, 112, 3),blue);
+    padding-top:10%;
 }
 
 .innerAbout{
