--- a/src/styles/Shop.css
+++ b/src/styles/Shop.css
@@ -4,15 +4,18 @@
     background: transparent;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     background: linear-gradient(black,orange,blue);
+    padding-top:10%
 }
 .ItemsArray{
     display:flex;
     width: 100%;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     margin: 10px;
 }
 @media screen and (max-width: 420px) {
