--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -3,7 +3,7 @@
     height: 90vh;    
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     background: linear-gradient(black,rgb(180, 245, 245),blue);
 }
