--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: start;
+    align-items: flex-start;
     padding-top: 25%;
 
 }
